dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr01.wacc
# type mismatch: int <- bool

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  i = true
end
